--- a/index.html
+++ b/index.html
@@ -14,46 +14,6 @@
     section[id] { scroll-margin-top: 96px; }
   </style>
 </head>
-
-<script>
-  function initCarousel(root){
-    const slides = Array.from(root.querySelectorAll('.slide'));
-    if (!slides.length) return;
-
-    // Ensure exactly one slide visible initially
-    slides.forEach((s, idx) => s.classList.toggle('hidden', idx !== 0));
-    let i = 0;
-
-    function show(idx){
-      i = (idx + slides.length) % slides.length;
-      slides.forEach((s, j) => s.classList.toggle('hidden', j !== i));
-    }
-
-    // Click the viewport to advance
-    root.querySelector('.viewport')?.addEventListener('click', () => show(i + 1));
-
-    // Keyboard & swipe (nice to have)
-    root.setAttribute('tabindex','0');
-    root.addEventListener('keydown', e => {
-      if (e.key === 'ArrowRight') show(i + 1);
-      if (e.key === 'ArrowLeft')  show(i - 1);
-    });
-    let x0 = null, threshold = 30;
-    root.addEventListener('touchstart', e => x0 = e.touches[0].clientX, {passive:true});
-    root.addEventListener('touchend',   e => {
-      if (x0 == null) return;
-      const dx = e.changedTouches[0].clientX - x0;
-      if (Math.abs(dx) > threshold) show(dx > 0 ? i - 1 : i + 1);
-      x0 = null;
-    }, {passive:true});
-  }
-
-  document.addEventListener('DOMContentLoaded', () => {
-    document.querySelectorAll('[data-carousel]').forEach(initCarousel);
-  });
-</script>
-
-
 <body class="bg-neutral-950 text-neutral-100 selection:bg-white/20 selection:text-white">
 
   <!-- NAV -->
@@ -86,7 +46,7 @@
       </div>
       <div class="relative">
         <div class="aspect-[4/5] rounded-3xl bg-neutral-900 border border-white/10 shadow-soft overflow-hidden">
-          <!-- HERO IMAGE UPDATED -->
+          <!-- hero image -->
           <img src="moda.png" alt="Moda showcase" class="w-full h-full object-cover opacity-90"/>
         </div>
         <div class="absolute -bottom-6 -left-6 w-40 md:w-48 rotate-[-6deg]">
@@ -105,7 +65,7 @@
     </div>
   </section>
 
-  <!-- SERVICES (Designs + Ad Creatives only) -->
+  <!-- SERVICES -->
   <section id="services" class="max-w-6xl mx-auto px-4 py-20">
     <h2 class="text-3xl md:text-4xl font-black">Services</h2>
     <p class="mt-2 text-neutral-300 max-w-2xl">We specialize in bold visuals and ad-ready assets that elevate your brand.</p>
@@ -121,7 +81,6 @@
           <li>Print-ready files + mockups</li>
         </ul>
       </div>
-
       <!-- Ad Creatives -->
       <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
         <h3 class="font-bold text-xl">Ad Creatives</h3>
@@ -135,116 +94,88 @@
     </div>
   </section>
 
-<!-- ADS -->
-<section id="ads" class="max-w-6xl mx-auto px-4 pb-12">
-  <div class="flex items-end justify-between gap-4">
-    <div>
-      <h2 class="text-4xl md:text-5xl font-black">Ads</h2>
-      <p class="mt-2 text-neutral-300">Reels, clothing brand ads, and image ads we’ve created.</p>
+  <!-- ADS -->
+  <section id="ads" class="max-w-6xl mx-auto px-4 pb-12">
+    <div class="flex items-end justify-between gap-4">
+      <div>
+        <h2 class="text-4xl md:text-5xl font-black">Ads</h2>
+        <p class="mt-2 text-neutral-300">Reels, clothing brand ads, and image ads we’ve created.</p>
+      </div>
     </div>
-  </div>
 
-  <!-- CLOTHING BRAND ADS -->
-  <div class="mt-10">
-    <h3 class="text-2xl font-bold mb-4">Clothing Brand Ads</h3>
-    <div class="rounded-2xl border border-white/10 bg-neutral-900/40 p-3">
-      <div class="relative" data-carousel="clothing">
-        <!-- Viewport: centers image, keeps it contained -->
-        <div class="viewport overflow-hidden rounded-xl bg-neutral-800 max-h-80 md:max-h-[28rem] mx-auto grid place-items-center cursor-pointer select-none">
-          <!-- First slide is visible; others hidden -->
-          <img class="slide max-h-80 md:max-h-[28rem] w-auto h-auto object-contain"
-               src="./allweneedismoney.png" alt="All We Need Is Money Hoodie" loading="lazy">
-          <img class="slide hidden max-h-80 md:max-h-[28rem] w-auto h-auto object-contain"
-               src="./stussy.png" alt="Stüssy Dogs Graphic" loading="lazy">
-          <img class="slide hidden max-h-80 md:max-h-[28rem] w-auto h-auto object-contain"
-               src="./statueofliberty.png" alt="Statue of Liberty Set" loading="lazy">
-          <img class="slide hidden max-h-80 md:max-h-[28rem] w-auto h-auto object-contain"
-               src="./hs.png" alt="Moda Fit Ad" loading="lazy">
-          <img class="slide hidden max-h-80 md:max-h-[28rem] w-auto h-auto object-contain"
-               src="./ghostfit.png" alt="Ghostfit Outfit" loading="lazy">
-          <img class="slide hidden max-h-80 md:max-h-[28rem] w-auto h-auto object-contain"
-               src="./tuffzipup.png" alt="Tuff Zip-Up" loading="lazy">
-          <img class="slide hidden max-h-80 md:max-h-[28rem] w-auto h-auto object-contain"
-               src="./yellowhoodie.png" alt="Yellow Hoodie" loading="lazy">
+    <!-- CLOTHING BRAND ADS -->
+    <div class="mt-10">
+      <h3 class="text-2xl font-bold mb-4">Clothing Brand Ads</h3>
+      <div class="rounded-2xl border border-white/10 bg-neutral-900/40 p-3">
+        <div class="relative" data-carousel="clothing">
+          <div class="viewport inline-block overflow-hidden rounded-xl bg-transparent mx-auto cursor-pointer select-none">
+            <img class="slide block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./allweneedismoney.png" alt="All We Need Is Money Hoodie" loading="lazy">
+            <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./stussy.png" alt="Stüssy Dogs Graphic" loading="lazy">
+            <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./statueofliberty.png" alt="Statue of Liberty Set" loading="lazy">
+            <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./hs.png" alt="Moda Fit Ad" loading="lazy">
+            <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./ghostfit.png" alt="Ghostfit Outfit" loading="lazy">
+            <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./tuffzipup.png" alt="Tuff Zip-Up" loading="lazy">
+            <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./yellowhoodie.png" alt="Yellow Hoodie" loading="lazy">
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- REELS -->
-  <div class="mt-12">
-    <h3 class="text-2xl font-bold mb-4">Reels</h3>
-    <div class="rounded-2xl border border-white/10 bg-neutral-900/40 p-3">
-      <div class="relative" data-carousel="reels">
-        <div class="viewport overflow-hidden rounded-xl bg-neutral-800 max-h-72 md:max-h-80 mx-auto grid place-items-center cursor-pointer select-none">
-          <!-- Use posters or thumbnails; click advances -->
-          <img class="slide max-h-72 md:max-h-80 w-auto h-auto object-contain"
-               src="./reel-thumb-01.png" alt="Reel 01" loading="lazy">
-          <img class="slide hidden max-h-72 md:max-h-80 w-auto h-auto object-contain"
-               src="./reel-thumb-02.png" alt="Reel 02" loading="lazy">
-          <img class="slide hidden max-h-72 md:max-h-80 w-auto h-auto object-contain"
-               src="./reel-thumb-03.png" alt="Reel 03" loading="lazy">
+    <!-- REELS (thumbnail placeholders; click-through works the same) -->
+    <div class="mt-12">
+      <h3 class="text-2xl font-bold mb-4">Reels</h3>
+      <div class="rounded-2xl border border-white/10 bg-neutral-900/40 p-3">
+        <div class="relative" data-carousel="reels">
+          <div class="viewport inline-block overflow-hidden rounded-xl bg-transparent mx-auto cursor-pointer select-none">
+            <img class="slide block h-auto max-h-72 md:max-h-80 w-auto max-w-full" src="./reel-thumb-01.png" alt="Reel 01" loading="lazy">
+            <img class="slide hidden block h-auto max-h-72 md:max-h-80 w-auto max-w-full" src="./reel-thumb-02.png" alt="Reel 02" loading="lazy">
+            <img class="slide hidden block h-auto max-h-72 md:max-h-80 w-auto max-w-full" src="./reel-thumb-03.png" alt="Reel 03" loading="lazy">
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- IMAGE ADS -->
-  <div class="mt-12">
-    <h3 class="text-2xl font-bold mb-4">Image Ads</h3>
-    <div class="rounded-2xl border border-white/10 bg-neutral-900/40 p-3">
-      <div class="relative" data-carousel="image-ads">
-        <div class="viewport overflow-hidden rounded-xl bg-neutral-800 max-h-80 md:max-h-[28rem] mx-auto grid place-items-center cursor-pointer select-none">
-          <img class="slide max-h-80 md:max-h-[28rem] w-auto h-auto object-contain"
-               src="./imagead1.png" alt="Image Ad 1" loading="lazy">
-          <img class="slide hidden max-h-80 md:max-h-[28rem] w-auto h-auto object-contain"
-               src="./imagead2.png" alt="Image Ad 2" loading="lazy">
+    <!-- IMAGE ADS -->
+    <div class="mt-12">
+      <h3 class="text-2xl font-bold mb-4">Image Ads</h3>
+      <div class="rounded-2xl border border-white/10 bg-neutral-900/40 p-3">
+        <div class="relative" data-carousel="image-ads">
+          <div class="viewport inline-block overflow-hidden rounded-xl bg-transparent mx-auto cursor-pointer select-none">
+            <img class="slide block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./imagead1.png" alt="Image Ad 1" loading="lazy">
+            <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./imagead2.png" alt="Image Ad 2" loading="lazy">
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-
-
-
-<!-- DESIGNS -->
-<section id="designs" class="max-w-6xl mx-auto px-4 pb-12">
-  <div class="flex items-end justify-between gap-4">
-    <div>
-      <h2 class="text-3xl md:text-4xl font-black">Designs</h2>
-      <p class="mt-2 text-neutral-300">Artwork and visuals we’ve created.</p>
-    </div>
-  </div>
-
-  <div class="mt-6 rounded-2xl border border-white/10 bg-neutral-900/40 p-3">
-    <div class="relative" data-carousel="designs">
-      <div class="viewport overflow-hidden rounded-xl bg-neutral-800 max-h-80 md:max-h-[28rem] mx-auto grid place-items-center cursor-pointer select-none">
-        <img class="slide max-h-80 md:max-h-[28rem] w-auto h-auto object-contain"
-             src="./1800raceme-copy.jpg" alt="Drift Racers" loading="lazy">
-        <img class="slide hidden max-h-80 md:max-h-[28rem] w-auto h-auto object-contain"
-             src="./bmw.jpg" alt="BMW Cross" loading="lazy">
-        <img class="slide hidden max-h-80 md:max-h-[28rem] w-auto h-auto object-contain"
-             src="./bradpitt-1.jpg" alt="Brad Pitt Neon" loading="lazy">
-        <img class="slide hidden max-h-80 md:max-h-[28rem] w-auto h-auto object-contain"
-             src="./bradpitt-2.jpg" alt="Brad Pitt Gold" loading="lazy">
-        <img class="slide hidden max-h-80 md:max-h-[28rem] w-auto h-auto object-contain"
-             src="./cross.jpg" alt="Cross" loading="lazy">
-        <img class="slide hidden max-h-80 md:max-h-[28rem] w-auto h-auto object-contain"
-             src="./divine.jpg" alt="Divine" loading="lazy">
-        <img class="slide hidden max-h-80 md:max-h-[28rem] w-auto h-auto object-contain"
-             src="./dog.jpg" alt="Dog" loading="lazy">
-        <img class="slide hidden max-h-80 md:max-h-[28rem] w-auto h-auto object-contain"
-             src="./kd.jpg" alt="Basketball" loading="lazy">
-        <img class="slide hidden max-h-80 md:max-h-[28rem] w-auto h-auto object-contain"
-             src="./snow-people.jpg" alt="Snow People" loading="lazy">
+  <!-- DESIGNS -->
+  <section id="designs" class="max-w-6xl mx-auto px-4 pb-12">
+    <div class="flex items-end justify-between gap-4">
+      <div>
+        <h2 class="text-3xl md:text-4xl font-black">Designs</h2>
+        <p class="mt-2 text-neutral-300">Artwork and visuals we’ve created.</p>
       </div>
     </div>
-  </div>
-</section>
 
+    <div class="mt-6 rounded-2xl border border-white/10 bg-neutral-900/40 p-3">
+      <div class="relative" data-carousel="designs">
+        <div class="viewport inline-block overflow-hidden rounded-xl bg-transparent mx-auto cursor-pointer select-none">
+          <img class="slide block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./1800raceme-copy.jpg" alt="Drift Racers" loading="lazy">
+          <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./bmw.jpg" alt="BMW Cross" loading="lazy">
+          <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./bradpitt-1.jpg" alt="Brad Pitt Neon" loading="lazy">
+          <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./bradpitt-2.jpg" alt="Brad Pitt Gold" loading="lazy">
+          <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./cross.jpg" alt="Cross" loading="lazy">
+          <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./divine.jpg" alt="Divine" loading="lazy">
+          <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./dog.jpg" alt="Dog" loading="lazy">
+          <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./kd.jpg" alt="Basketball" loading="lazy">
+          <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./snow-people.jpg" alt="Snow People" loading="lazy">
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <!-- PRICING → replaced by CTA -->
+  <!-- PRICING (CTA only) -->
   <section id="pricing" class="max-w-6xl mx-auto px-4 py-20">
     <h2 class="text-3xl md:text-4xl font-black">Pricing</h2>
     <p class="mt-2 text-neutral-300 max-w-2xl">Contact us for pricing and a fast custom quote based on your project scope.</p>
@@ -264,11 +195,13 @@
         <div class="mt-6 space-y-2 text-neutral-300">
           <div>Instagram: <a href="https://www.instagram.com/moda_markting/" target="_blank" class="underline">@moda_markting</a></div>
           <div>Email: <a href="mailto:modamarkets313@gmail.com" class="underline">modamarkets313@gmail.com</a></div>
+          <div>Open form: <a href="https://docs.google.com/forms/d/e/YOUR_FORM_ID/viewform" target="_blank" class="underline">Google Form</a></div>
         </div>
       </div>
       <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
-       <a href="https://docs.google.com/forms/d/e/1FAIpQLScU1Rmc18VK_gwqHpP79nmRCN7cMfupi6pDfbBK7aVQbDa7fg/viewform?usp=dialog" target="_blank" class="underline">Open Google Form</a>
-       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScU1Rmc18VK_gwqHpP79nmRCN7cMfupi6pDfbBK7aVQbDa7fg/viewform?embedded=true" width="640" height="1283" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <!-- Replace YOUR_FORM_ID with the ID from Send → <> Embed -->
+        <iframe src="https://docs.google.com/forms/d/e/YOUR_FORM_ID/viewform?embedded=true"
+                width="100%" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
     </div>
   </section>
@@ -277,5 +210,44 @@
   <div class="fixed bottom-4 right-4 z-50">
     <a href="#contact" class="px-4 py-3 rounded-xl shadow-soft bg-indigo-500 hover:bg-indigo-600 font-semibold">Get a Quote</a>
   </div>
+
+  <!-- minimal carousel JS: click image to advance -->
+  <script>
+    function initCarousel(root){
+      const slides = Array.from(root.querySelectorAll('.slide'));
+      if (!slides.length) return;
+
+      // ensure exactly one slide visible initially
+      slides.forEach((s, idx) => s.classList.toggle('hidden', idx !== 0));
+      let i = 0;
+
+      function show(idx){
+        i = (idx + slides.length) % slides.length;
+        slides.forEach((s, j) => s.classList.toggle('hidden', j !== i));
+      }
+
+      // click-to-next on the viewport
+      root.querySelector('.viewport')?.addEventListener('click', () => show(i + 1));
+
+      // keyboard & swipe (nice to have)
+      root.setAttribute('tabindex','0');
+      root.addEventListener('keydown', e => {
+        if (e.key === 'ArrowRight') show(i + 1);
+        if (e.key === 'ArrowLeft')  show(i - 1);
+      });
+      let x0 = null, threshold = 30;
+      root.addEventListener('touchstart', e => x0 = e.touches[0].clientX, {passive:true});
+      root.addEventListener('touchend', e => {
+        if (x0 == null) return;
+        const dx = e.changedTouches[0].clientX - x0;
+        if (Math.abs(dx) > threshold) show(dx > 0 ? i - 1 : i + 1);
+        x0 = null;
+      }, {passive:true});
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+      document.querySelectorAll('[data-carousel]').forEach(initCarousel);
+    });
+  </script>
 </body>
 </html>
