--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
       </div>
       <div class="relative">
         <div class="aspect-[4/5] rounded-3xl bg-neutral-900 border border-white/10 shadow-soft overflow-hidden">
-          <!-- hero image -->
           <img src="moda.png" alt="Moda showcase" class="w-full h-full object-cover opacity-90"/>
         </div>
         <div class="absolute -bottom-6 -left-6 w-40 md:w-48 rotate-[-6deg]">
@@ -69,9 +68,7 @@
   <section id="services" class="max-w-6xl mx-auto px-4 py-20">
     <h2 class="text-3xl md:text-4xl font-black">Services</h2>
     <p class="mt-2 text-neutral-300 max-w-2xl">We specialize in bold visuals and ad-ready assets that elevate your brand.</p>
-
     <div class="mt-10 grid md:grid-cols-2 gap-6">
-      <!-- Designs -->
       <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
         <h3 class="font-bold text-xl">Designs</h3>
         <p class="mt-2 text-neutral-300">Apparel graphics, posters, and artwork tailored to your brand.</p>
@@ -81,7 +78,6 @@
           <li>Print-ready files + mockups</li>
         </ul>
       </div>
-      <!-- Ad Creatives -->
       <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
         <h3 class="font-bold text-xl">Ad Creatives</h3>
         <p class="mt-2 text-neutral-300">High-performing Instagram/TikTok visuals designed to convert.</p>
@@ -99,43 +95,26 @@
     <div class="flex items-end justify-between gap-4">
       <div>
         <h2 class="text-4xl md:text-5xl font-black">Ads</h2>
-        <p class="mt-2 text-neutral-300">Reels, clothing brand ads, and image ads we’ve created.</p>
+        <p class="mt-2 text-neutral-300">Clothing brand ads and image ads.</p>
       </div>
     </div>
 
-    <!-- CLOTHING BRAND ADS -->
+    <!-- CLOTHING BRAND ADS (4 only) -->
     <div class="mt-10">
       <h3 class="text-2xl font-bold mb-4">Clothing Brand Ads</h3>
       <div class="rounded-2xl border border-white/10 bg-neutral-900/40 p-3">
         <div class="relative" data-carousel="clothing">
           <div class="viewport inline-block overflow-hidden rounded-xl bg-transparent mx-auto cursor-pointer select-none">
-            <img class="slide block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./allweneedismoney.png" alt="All We Need Is Money Hoodie" loading="lazy">
-            <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./stussy.png" alt="Stüssy Dogs Graphic" loading="lazy">
+            <img class="slide block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./hs.png"               alt="Moda Fit Ad" loading="lazy">
+            <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./ghostfit.png"        alt="Ghostfit Outfit" loading="lazy">
+            <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./stussy.png"          alt="Stüssy Dogs Graphic" loading="lazy">
             <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./statueofliberty.png" alt="Statue of Liberty Set" loading="lazy">
-            <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./hs.png" alt="Moda Fit Ad" loading="lazy">
-            <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./ghostfit.png" alt="Ghostfit Outfit" loading="lazy">
-            <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./tuffzipup.png" alt="Tuff Zip-Up" loading="lazy">
-            <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./yellowhoodie.png" alt="Yellow Hoodie" loading="lazy">
           </div>
         </div>
       </div>
     </div>
 
-    <!-- REELS (thumbnail placeholders; click-through works the same) -->
-    <div class="mt-12">
-      <h3 class="text-2xl font-bold mb-4">Reels</h3>
-      <div class="rounded-2xl border border-white/10 bg-neutral-900/40 p-3">
-        <div class="relative" data-carousel="reels">
-          <div class="viewport inline-block overflow-hidden rounded-xl bg-transparent mx-auto cursor-pointer select-none">
-            <img class="slide block h-auto max-h-72 md:max-h-80 w-auto max-w-full" src="./reel-thumb-01.png" alt="Reel 01" loading="lazy">
-            <img class="slide hidden block h-auto max-h-72 md:max-h-80 w-auto max-w-full" src="./reel-thumb-02.png" alt="Reel 02" loading="lazy">
-            <img class="slide hidden block h-auto max-h-72 md:max-h-80 w-auto max-w-full" src="./reel-thumb-03.png" alt="Reel 03" loading="lazy">
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- IMAGE ADS -->
+    <!-- IMAGE ADS (2 only) -->
     <div class="mt-12">
       <h3 class="text-2xl font-bold mb-4">Image Ads</h3>
       <div class="rounded-2xl border border-white/10 bg-neutral-900/40 p-3">
@@ -149,7 +128,7 @@
     </div>
   </section>
 
-  <!-- DESIGNS -->
+  <!-- DESIGNS (only the ones you want) -->
   <section id="designs" class="max-w-6xl mx-auto px-4 pb-12">
     <div class="flex items-end justify-between gap-4">
       <div>
@@ -161,15 +140,11 @@
     <div class="mt-6 rounded-2xl border border-white/10 bg-neutral-900/40 p-3">
       <div class="relative" data-carousel="designs">
         <div class="viewport inline-block overflow-hidden rounded-xl bg-transparent mx-auto cursor-pointer select-none">
-          <img class="slide block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./1800raceme-copy.jpg" alt="Drift Racers" loading="lazy">
-          <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./bmw.jpg" alt="BMW Cross" loading="lazy">
-          <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./bradpitt-1.jpg" alt="Brad Pitt Neon" loading="lazy">
-          <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./bradpitt-2.jpg" alt="Brad Pitt Gold" loading="lazy">
-          <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./cross.jpg" alt="Cross" loading="lazy">
-          <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./divine.jpg" alt="Divine" loading="lazy">
-          <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./dog.jpg" alt="Dog" loading="lazy">
-          <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./kd.jpg" alt="Basketball" loading="lazy">
-          <img class="slide hidden block h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./snow-people.jpg" alt="Snow People" loading="lazy">
+          <img class="slide block  h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./undrwrld.jpg" alt="Underworld Cross" loading="lazy">
+          <img class="slide hidden h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./bmw.jpg"      alt="BMW Cross"        loading="lazy">
+          <img class="slide hidden h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./skele.png"    alt="Skeleton Crown"   loading="lazy">
+          <img class="slide hidden h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./horses.jpg"   alt="Horses Pattern"   loading="lazy">
+          <img class="slide hidden h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./dog.jpg"      alt="Dog Graphic"      loading="lazy">
         </div>
       </div>
     </div>
@@ -217,7 +192,7 @@
       const slides = Array.from(root.querySelectorAll('.slide'));
       if (!slides.length) return;
 
-      // ensure exactly one slide visible initially
+      // show only the first slide initially
       slides.forEach((s, idx) => s.classList.toggle('hidden', idx !== 0));
       let i = 0;
 
@@ -226,10 +201,10 @@
         slides.forEach((s, j) => s.classList.toggle('hidden', j !== i));
       }
 
-      // click-to-next on the viewport
+      // click image to go next
       root.querySelector('.viewport')?.addEventListener('click', () => show(i + 1));
 
-      // keyboard & swipe (nice to have)
+      // keyboard + swipe (nice to have)
       root.setAttribute('tabindex','0');
       root.addEventListener('keydown', e => {
         if (e.key === 'ArrowRight') show(i + 1);
