--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
   </section>
 
-  <!-- ADS (NOW STATIC GRIDS) -->
+  <!-- ADS -->
   <section id="ads" class="max-w-6xl mx-auto px-4 pb-12">
     <div class="flex items-end justify-between gap-4">
       <div>
@@ -99,40 +99,40 @@
       </div>
     </div>
 
-    <!-- CLOTHING BRAND ADS (4 images) -->
+    <!-- CLOTHING BRAND ADS -->
     <div class="mt-10">
       <h3 class="text-2xl font-bold mb-4">Clothing Brand Ads</h3>
       <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-6">
         <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
-          <img class="w-full h-64 object-cover" src="./hs.png" alt="Moda Fit Ad" loading="lazy">
+          <img class="w-full h-80 object-cover" src="./hs.png" alt="Moda Fit Ad" loading="lazy">
         </div>
         <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
-          <img class="w-full h-64 object-cover" src="./ghostfit.png" alt="Ghostfit Outfit" loading="lazy">
+          <img class="w-full h-80 object-cover" src="./ghostfit.png" alt="Ghostfit Outfit" loading="lazy">
         </div>
         <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
-          <img class="w-full h-64 object-cover" src="./stussy.png" alt="Stüssy Dogs Graphic" loading="lazy">
+          <img class="w-full h-80 object-cover" src="./stussy.png" alt="Stüssy Dogs Graphic" loading="lazy">
         </div>
         <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
-          <img class="w-full h-64 object-cover" src="./statueofliberty.png" alt="Statue of Liberty Set" loading="lazy">
+          <img class="w-full h-80 object-cover" src="./statueofliberty.png" alt="Statue of Liberty Set" loading="lazy">
         </div>
       </div>
     </div>
 
-    <!-- IMAGE ADS (2 images) -->
+    <!-- IMAGE ADS (taller now) -->
     <div class="mt-12">
       <h3 class="text-2xl font-bold mb-4">Image Ads</h3>
       <div class="grid sm:grid-cols-2 gap-6">
         <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
-          <img class="w-full h-64 object-cover" src="./imagead1.png" alt="Image Ad 1" loading="lazy">
+          <img class="w-full h-96 object-cover" src="./imagead1.png" alt="Image Ad 1" loading="lazy">
         </div>
         <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
-          <img class="w-full h-64 object-cover" src="./imagead2.png" alt="Image Ad 2" loading="lazy">
+          <img class="w-full h-96 object-cover" src="./imagead2.png" alt="Image Ad 2" loading="lazy">
         </div>
       </div>
     </div>
   </section>
 
-  <!-- DESIGNS (carousel with the specific files you want) -->
+  <!-- DESIGNS (grid instead of carousel) -->
   <section id="designs" class="max-w-6xl mx-auto px-4 pb-12">
     <div class="flex items-end justify-between gap-4">
       <div>
@@ -141,15 +141,21 @@
       </div>
     </div>
 
-    <div class="mt-6 rounded-2xl border border-white/10 bg-neutral-900/40 p-3">
-      <div class="relative" data-carousel="designs">
-        <div class="viewport inline-block overflow-hidden rounded-xl bg-transparent mx-auto cursor-pointer select-none">
-          <img class="slide block  h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./undrwrld.jpg" alt="Underworld Cross" loading="lazy">
-          <img class="slide hidden h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./bmw.jpg"      alt="BMW Cross"        loading="lazy">
-          <img class="slide hidden h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./skele.jpg"    alt="Skeleton Crown"   loading="lazy">
-          <img class="slide hidden h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./horses.jpg"   alt="Horses Pattern"   loading="lazy">
-          <img class="slide hidden h-auto max-h-80 md:max-h-[28rem] w-auto max-w-full" src="./dog.jpg"      alt="Dog Graphic"      loading="lazy">
-        </div>
+    <div class="mt-6 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+        <img class="w-full h-80 object-cover" src="./undrwrld.jpg" alt="Underworld Cross" loading="lazy">
+      </div>
+      <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+        <img class="w-full h-80 object-cover" src="./bmw.jpg" alt="BMW Cross" loading="lazy">
+      </div>
+      <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+        <img class="w-full h-80 object-cover" src="./skele.jpg" alt="Skeleton Crown" loading="lazy">
+      </div>
+      <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+        <img class="w-full h-80 object-cover" src="./horses.jpg" alt="Horses Pattern" loading="lazy">
+      </div>
+      <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+        <img class="w-full h-80 object-cover" src="./dog.jpg" alt="Dog Graphic" loading="lazy">
       </div>
     </div>
   </section>
@@ -165,7 +171,7 @@
     </div>
   </section>
 
-  <!-- CONTACT (Google Form fixed with your embed) -->
+  <!-- CONTACT -->
   <section id="contact" class="max-w-6xl mx-auto px-4 py-16">
     <div class="grid md:grid-cols-2 gap-8 items-start">
       <div>
@@ -177,7 +183,6 @@
         </div>
       </div>
       <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
-        <!-- Your exact form embed, made responsive on width -->
         <iframe
           src="https://docs.google.com/forms/d/e/1FAIpQLScU1Rmc18VK_gwqHpP79nmRCN7cMfupi6pDfbBK7aVQbDa7fg/viewform?embedded=true"
           width="100%" height="1276" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
@@ -189,36 +194,5 @@
   <div class="fixed bottom-4 right-4 z-50">
     <a href="#contact" class="px-4 py-3 rounded-xl shadow-soft bg-indigo-500 hover:bg-indigo-600 font-semibold">Get a Quote</a>
   </div>
-
-  <!-- Minimal carousel JS (Designs only) -->
-  <script>
-    function initCarousel(root){
-      const slides = Array.from(root.querySelectorAll('.slide'));
-      if (!slides.length) return;
-      slides.forEach((s, idx) => s.classList.toggle('hidden', idx !== 0));
-      let i = 0;
-      function show(idx){
-        i = (idx + slides.length) % slides.length;
-        slides.forEach((s, j) => s.classList.toggle('hidden', j !== i));
-      }
-      root.querySelector('.viewport')?.addEventListener('click', () => show(i + 1));
-      root.setAttribute('tabindex','0');
-      root.addEventListener('keydown', e => {
-        if (e.key === 'ArrowRight') show(i + 1);
-        if (e.key === 'ArrowLeft')  show(i - 1);
-      });
-      let x0 = null, threshold = 30;
-      root.addEventListener('touchstart', e => x0 = e.touches[0].clientX, {passive:true});
-      root.addEventListener('touchend', e => {
-        if (x0 == null) return;
-        const dx = e.changedTouches[0].clientX - x0;
-        if (Math.abs(dx) > threshold) show(dx > 0 ? i - 1 : i + 1);
-        x0 = null;
-      }, {passive:true});
-    }
-    document.addEventListener('DOMContentLoaded', () => {
-      document.querySelectorAll('[data-carousel]').forEach(initCarousel);
-    });
-  </script>
 </body>
 </html>
