--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <img class="w-full h-80 object-cover" src="./bmw.jpg" alt="BMW Cross" loading="lazy">
       </div>
       <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
-        <img class="w-full h-80 object-cover" src="./skele.jpg" alt="Skeleton Crown" loading="lazy">
+        <img class="w-full h-80 object-cover" src="./skele.png" alt="Skeleton Crown" loading="lazy">
       </div>
       <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
         <img class="w-full h-80 object-cover" src="./horses.jpg" alt="Horses Pattern" loading="lazy">
